--- a/action.yaml
+++ b/action.yaml
@@ -23,6 +23,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+  - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
+    shell: bash
   - run: ./cache.sh
     shell: bash
 
