--- a/action.yaml
+++ b/action.yaml
@@ -25,6 +25,6 @@ runs:
   steps:
   - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
     shell: bash
-  - run: ./cache.sh
+  - run: cache.sh
     shell: bash
 
